# adimplere-test-api

./: .example.env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/app/: main.py  route.py  settings.py
src/excepetion/: games_excepetion.py
src/routers/v1/: games_router.py
src/schemas/: games_schemas.py
src/services/: games_services.py
